Fix - pl_css #2 - Color Expansion and variable renaming . → Moved current programming language icon logo image along with the title and the info paragraph... → Added a todo tag to check if a text in the website can be wrapped according to the grid area of the element...

--- a/styles/main_page_styles/general.css
+++ b/styles/main_page_styles/general.css
@@ -4,9 +4,12 @@ Secondary Color: Teal
 Accent Color: Cyan / Aqua
 */
 :root {
-    --primary-color: #36454f;
-    --secondary-color: #008080;
-    --accent-color: #ffa500;
+    --color-palette-dominant: #36454f;
+    --color-palette-complementary: #008080;
+    --color-palette-accent: #ffa500;
+    --color-palette-light-neutral: #f0f0f0;
+    --color-palette-dark-neutral: #2c3e50;
+    --color-palette-additional-accent: #e74c3c;
 }
 
 /* Remove any existing elements margins and paddings */
@@ -17,7 +20,7 @@ Accent Color: Cyan / Aqua
 }
 
 body {
-    background-color: var(--primary-color);
+    background-color: var(--color-palette-dominant);
     font-family: "Rubik";
     overflow: hidden;
 }
